--- a/20221207/src/main/webapp/WEB-INF/web.xml
+++ b/20221207/src/main/webapp/WEB-INF/web.xml
@@ -26,4 +26,8 @@
 		<servlet-name>FrontController</servlet-name>
 		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
+	
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
